Unify/Not-Used/Kuber/configurations/bosler-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bosler
  labels:
    name: bosler
