Unify/Not-Used/Kuber/configurations/movetodata-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movetodata
  labels:
    name: movetodata
