Unify/Not-Used/Kuber/configurations/boson-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: boson
  name: boson
  namespace: bosler
spec:
  replicas: 1
  selector:
    matchLabels:
      name: boson
  template:
    metadata:
      labels:
        name: boson
    spec:
      containers:
        - args:
            - java
            - -jar
            - -Dspring.profiles.active=kubernetes
            - /app/boson-0.0.1-SNAPSHOT.jar
          image: rmalik/bosler:boson
          imagePullPolicy: Always
          name: boson
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /root/bosler
              name: boson-pv
          workingDir: /app
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: boson-pv
          persistentVolumeClaim:
            claimName: boson-pvc

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: boson
  name: boson
  namespace: bosler
spec:
  ports:
    - name: boson
      port: 8080
      targetPort: 8080
  selector:
    name: boson
status:
  loadBalancer: {}
