Unify/Not-Used/Kuber/configurations/boson-minio-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: minio
  name: minio
  namespace: movetodata
spec:
  replicas: 1
  selector:
    matchLabels:
      name: minio
  template:
    metadata:
      labels:
        name: minio
    spec:
      containers:
        - args:
            - server
            - /storage
          image: minio/minio:latest
          imagePullPolicy: Always
          name: minio
          ports:
            - containerPort: 9000
              hostPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /root/movetodata
              name: minio-pv
          workingDir: /app
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: minio-pv
          persistentVolumeClaim:
            claimName: minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: minio
  name: minio
  namespace: movetodata
spec:
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
  selector:
    name: minio
status:
  loadBalancer: {}
