Unify/Not-Used/Kuber/configurations/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: frontend
  name: frontend
  namespace: orphea
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - image: rmalik/orphea:frontend
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: frontend
  name: frontend
  namespace: orphea
spec:
  # type: NodePort
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 80
  selector:
    name: frontend
