Unify/Not-Used/Kuber/configurations/julia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: julia
  name: julia
  namespace: bosler
spec:
  replicas: 1
  selector:
    matchLabels:
      name: julia
  template:
    metadata:
      labels:
        name: julia
    spec:
      containers:
        - args:
            - java
            - -jar
            - -Dspring.profiles.active=kubernetes
            - /app/julia-0.0.1-SNAPSHOT-all.jar
          image: rmalik/bosler:julia
          imagePullPolicy: Always
          name: julia
          ports:
            - containerPort: 58542
          resources: {}
          volumeMounts:
            - mountPath: /root/bosler
              name: julia-pv
          workingDir: /app
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: julia-pv
          persistentVolumeClaim:
            claimName: julia-pvc

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: julia
  name: julia
  namespace: bosler
spec:
  ports:
    - name: julia
      port: 58542
      targetPort: 58542
  selector:
    name: julia
status:
  loadBalancer: {}
