Unify/Not-Used/Kuber/configurations/movetodata-docker-registery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movetodata-docker-registry
  namespace: movetodata
  labels:
    app: movetodata-docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movetodata-docker-registry
  template:
    metadata:
      labels:
        app: movetodata-docker-registry
    spec:
      volumes:
        - name: certs-vol
          hostPath:
            path: /movetodata/docker/certs/
            type: Directory
        - name: registry-vol
          hostPath:
            path: /movetodata/docker/registry/
            type: Directory

      containers:
        - image: registry:2
          name: movetodata-docker-registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: certs-vol
              mountPath: /movetodata/docker/certs/
            - name: registry-vol
              mountPath: /var/lib/registry/

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movetodata-docker-registry
  name: movetodata-docker-registry
  namespace: movetodata
spec:
  ports:
    - port: 5000
      nodePort: 31320
      protocol: TCP
      targetPort: 5000
  selector:
    app: movetodata-docker-registry
  type: NodePort
