Unify/Not-Used/Kuber/configurations/orphea-docker-registery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orphea-docker-registry
  namespace: orphea
  labels:
    app: orphea-docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orphea-docker-registry
  template:
    metadata:
      labels:
        app: orphea-docker-registry
    spec:
      volumes:
        - name: certs-vol
          hostPath:
            path: /orphea/docker/certs/
            type: Directory
        - name: registry-vol
          hostPath:
            path: /orphea/docker/registry/
            type: Directory

      containers:
        - image: registry:2
          name: orphea-docker-registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: certs-vol
              mountPath: /orphea/docker/certs/
            - name: registry-vol
              mountPath: /var/lib/registry/

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orphea-docker-registry
  name: orphea-docker-registry
  namespace: orphea
spec:
  ports:
    - port: 5000
      nodePort: 31320
      protocol: TCP
      targetPort: 5000
  selector:
    app: orphea-docker-registry
  type: NodePort
