Unify/Not-Used/Kuber/configurations/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: database
  name: boson-db
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: boson-db
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: boson-db
    spec:
      containers:
        - name: boson-db
          image: postgres:13-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume-mount
          command: ["/bin/sh"]
          args:
            - -c
            - >-
              su - postgres -c "psql -c 'CREATE DATABASE boson;'"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: boson-db
  labels:
    service: boson-db
spec:
  selector:
    service: boson-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
