Unify/Not-Used/Kuber/configurations/orphea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orphea-ingress
  namespace: orphea
spec:
  rules:
    - http:
        paths:
          - path: /kitab/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /fractal/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /bob/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /galileo/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /passport/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /scheduler/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /zoro/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /ping
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /swagger-ui/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /swagger-ui.html
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /v3/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: boson
                port:
                  number: 8080
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
